# RabbitCloudPrinter

./: .gitignore  LICENSE  README.md  about_doc.md  index.js  install.cmd  install_doc.md  install_server.cmd  package.json  run_server.cmd  run_server_dev.cmd
Licenses/: imagemagick
config/: config.yaml
docs/: API-docs.md  演示.md
html/: html.rar  index.html  template.html  user_manger.html
html/static/: icon.psd
html/static/js/: functions.js  upload_files.js
print/: print.py  requirements.txt
print/templates/: echo.html  upload.html
server/: Lyric.py  together.py
server/.for_test/: 2.js  convert_doc_to_pdf.js  package-lock.json  package.json  tempCodeRunnerFile.py  test.py
server/file_manager/: API-list.md  collect_node.db  index.html  index.js  install.cmd  package-lock.json  package.json  router.js
server/print_really/: README.md  hi.py  install.sh  pm2.config.js  pyproject.toml  requirements.txt  run.cmd  run_dev.cmd
server/print_really/config/: configs.py
server/print_really/libs/imagemagick/: NOTICE.txt  configure.xml
server/print_really/plugins/: __init__.py  _template.py  api_get_printers.py  api_http_bot.py  api_old_func_uploader.py  api_preview.py  api_show_print_real_time_info.py  api_show_sys_info.py  api_time_plugin.py  template_print.py
server/print_really/plugins/func/: func_exec_print_command.py  func_get_server_config.py  print_cn.py
server/print_really/templates/: upload.html
server/print_really/tests/: debug.py  test.py.js
server/print_server_fake/: 1.py  2.py  3.py
web/test/: startTestServer
web/test/lycrics/: a.lyc  (+1 more)
(+22 files in other folders)
