[tool.pdm]

[project]
name = "for_printing"
version = "0.1.0"
description = ""
authors = [
    {name = "dayi", email = "yumibiao10@gmail.com"},
]
dependencies = [
    "flask>=2.2.3",
    "pillow>=9.5.0",
    "docx2pdf>=0.1.8",
    "requests>=2.28.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
